Initial colors and fonts styling complete

--- a/index.html
+++ b/index.html
@@ -8,60 +8,110 @@
       integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q"
       crossorigin="anonymous"
     />
+    <!-- The following three links are for loading the Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>My website design system</title>
   </head>
   <body>
-    <h1>
-        My website design system
-    </h1>
-    <div class="colors-container">
-        <ul>
-            <li class='color'>
+      <main>
+        <h1>
+            My website design system
+        </h1>
+        <div class="colors-container">
+            <h2>
+                Colors
+            </h2>
+            <div class='color' id="black">
                 Black 
                 <br>
                 #232323
-            </li>
-            <li class='color'>
+            </div>
+            <div class='color' id="white">
                 White 
                 <br>
                 #fffe
-            </li>
-            <li class='color'>
+            </div>
+            <div class='color' id="aqua">
                 Aqua 
                 <br>
                 #14bdbd
-            </li>
-            <li class='color'>
+            </div>
+            <div class='color' id="teal">
                 Teal 
                 <br>
                 #0b925e
-            </li>
-        </ul>
-    </div>
-    <div class="fonts-container">
-        <ul>
-            <li class='font' id="pt-sans">
-                <h4>
-                    PT Sans    
-                </h4>
-                <p>
-                    The monkey crossed the road.
-                </p>
-                <p>
-                    <strong>The monkey crossed the road.</strong>
-                </p>
-                <p>
-                    <em>The monkey crossed the road.</em>
-                </p>
-            </li>
-        </ul>
-    </div>
-    <div class="text-styles-container">
-        <ul>
-            <li class='text-style'>
-                
-            </li>
-        </ul>
-    </div>
+            </div>
+        </div>
+        <div class="fonts-container">
+            <h2>
+                Fonts
+            </h2>
+                <div class='font' id="pt-sans">
+                    <h4>
+                        <u>PT Sans</u>    
+                    </h4>
+                    <p>
+                        The monkey crossed the road.
+                    </p>
+                    <p>
+                        <strong>The monkey crossed the road.</strong>
+                    </p>
+                    <p>
+                        <em>The monkey crossed the road.</em>
+                    </p>
+                </div>
+                <div class='font' id="roboto">
+                    <h4>
+                        <u>Roboto</u>    
+                    </h4>
+                    <p>
+                        The monkey crossed the road.
+                    </p>
+                    <p>
+                        <strong>The monkey crossed the road.</strong>
+                    </p>
+                    <p>
+                        <em>The monkey crossed the road.</em>
+                    </p>
+                </div>
+                <div class='font' id="helvetica">
+                    <h4>
+                        <u>Helvetica</u>    
+                    </h4>
+                    <p>
+                        The monkey crossed the road.
+                    </p>
+                    <p>
+                        <strong>The monkey crossed the road.</strong>
+                    </p>
+                    <p>
+                        <em>The monkey crossed the road.</em>
+                    </p>
+                </div>
+        </div>
+        <div class="text-styles-container">
+            <ul>
+                <li class='text-style'>
+                    <h1 class="herosection-heading">
+                        H1: Herosection heading
+                    </h1>
+                    <ul>
+                        <li>
+                            Font-size: 55px
+                        </li>
+                        <li>
+                            Font-size: 50px (Max screen 960px)
+                        </li>
+                        <li>
+                            Font-size: 40px (Max screen 768px)
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+      </main>
   </body>
 </html>
