First draft of styling website complete

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
       <main>
-        <h1>
+        <h1 class="title">
             My website design system
         </h1>
         <div class="colors-container">
@@ -50,9 +50,9 @@
                 Fonts
             </h2>
                 <div class='font' id="pt-sans">
-                    <h4>
+                    <h3>
                         <u>PT Sans</u>    
-                    </h4>
+                    </h3>
                     <p>
                         The monkey crossed the road.
                     </p>
@@ -64,9 +64,9 @@
                     </p>
                 </div>
                 <div class='font' id="roboto">
-                    <h4>
+                    <h3>
                         <u>Roboto</u>    
-                    </h4>
+                    </h3>
                     <p>
                         The monkey crossed the road.
                     </p>
@@ -78,9 +78,9 @@
                     </p>
                 </div>
                 <div class='font' id="helvetica">
-                    <h4>
+                    <h3>
                         <u>Helvetica</u>    
-                    </h4>
+                    </h3>
                     <p>
                         The monkey crossed the road.
                     </p>
@@ -93,12 +93,14 @@
                 </div>
         </div>
         <div class="text-styles-container">
-            <ul>
-                <li class='text-style'>
+            <h2>
+                Text Styles
+            </h2>
+                <div class='text-style'>
                     <h1 class="herosection-heading">
                         H1: Herosection heading
                     </h1>
-                    <ul>
+                    <ul class="font-style-list">
                         <li>
                             Font-size: 55px
                         </li>
@@ -109,7 +111,39 @@
                             Font-size: 40px (Max screen 768px)
                         </li>
                     </ul>
-                </li>
+                </div>
+                <div class='text-style'>
+                    <h2 class="herosection-subheading">
+                        H2: Herosection subheading
+                    </h2>
+                    <ul class="font-style-list">
+                        <li>
+                            Font-size: 45px
+                        </li>
+                        <li>
+                            Font-size: 35px (Max screen 960px)
+                        </li>
+                        <li>
+                            Font-size: 24px (Max screen 768px)
+                        </li>
+                    </ul>
+                </div>
+                <div class='text-style'>
+                    <p class="herosection-p">
+                        p: Herosection paragraph
+                    </p>
+                    <ul class="font-style-list">
+                        <li>
+                            Font-size: 32px
+                        </li>
+                        <li>
+                            Font-size: 24px (Max screen 960px)
+                        </li>
+                        <li>
+                            Font-size: 20px (Max screen 768px)
+                        </li>
+                    </ul>
+                </div>
             </ul>
         </div>
       </main>
