Second draft of styling website complete. Included README

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <h1 class="title">
             My website design system
         </h1>
+        <div class="btn-container">
+            <a class='boilerplate-html-button' href="boilerplate-html.txt" target="_blank">
+                Boilerplate HTML
+            </a> 
+        </div>
         <div class="colors-container">
             <h2>
                 Colors
