Added new color 'grey' to color scheme

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 <br>
                 #0b925e
             </div>
+            <div class="color" id="grey">
+                Grey
+                <br>
+                #201F2E
+            </div>
         </div>
         <div class="fonts-container">
             <h2>
