--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!-- The following is required to give the browser information about how to control the page's dimensions and scaling -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Website Design System</title>
+    <!-- The following link is required to use FontAwesome icons. Check to see link and access key still work. -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
