Rewriting display as flexbox. Refactoring data store as .js file

--- a/index.html
+++ b/index.html
@@ -30,33 +30,33 @@
             </a> 
         </div>
         <div class="colors-container">
-            <h2>
-                Colors
-            </h2>
-            <div class='color' id="black">
-                Black 
-                <br>
-                #232323
-            </div>
-            <div class='color' id="white">
-                White 
-                <br>
-                #fffe
-            </div>
-            <div class='color' id="aqua">
-                Aqua 
-                <br>
-                #14bdbd
-            </div>
-            <div class='color' id="teal">
-                Teal 
-                <br>
-                #0b925e
-            </div>
-            <div class="color" id="grey">
-                Grey
-                <br>
-                #201F2E
+            <h2>Colors</h2>
+            <div class="colors-card-container">
+                <div class='color-card' id="black">
+                    Black 
+                    <br>
+                    #232323
+                </div>
+                <div class='color-card' id="white">
+                    White 
+                    <br>
+                    #fffe
+                </div>
+                <div class='color-card' id="aqua">
+                    Aqua 
+                    <br>
+                    #14bdbd
+                </div>
+                <div class='color-card' id="teal">
+                    Teal 
+                    <br>
+                    #0b925e
+                </div>
+                <div class="color-card" id="grey">
+                    Grey
+                    <br>
+                    #201F2E
+                </div>
             </div>
         </div>
         <div class="fonts-container">
