Finished update including using flexbox and creating a store of templates within main.js

--- a/index.html
+++ b/index.html
@@ -22,145 +22,32 @@
   <body>
       <main>
         <h1 class="title">
-            My website design system
+            Website design system
         </h1>
         <div class="btn-container">
             <a class='boilerplate-html-button' href="boilerplate-html.txt" target="_blank">
                 Boilerplate HTML
             </a> 
         </div>
-        <div class="colors-container">
-            <h2>Colors</h2>
-            <div class="colors-card-container">
-                <div class='color-card' id="black">
-                    Black 
-                    <br>
-                    #232323
-                </div>
-                <div class='color-card' id="white">
-                    White 
-                    <br>
-                    #fffe
-                </div>
-                <div class='color-card' id="aqua">
-                    Aqua 
-                    <br>
-                    #14bdbd
-                </div>
-                <div class='color-card' id="teal">
-                    Teal 
-                    <br>
-                    #0b925e
-                </div>
-                <div class="color-card" id="grey">
-                    Grey
-                    <br>
-                    #201F2E
-                </div>
+        <div class="container">
+            <h2>Colours</h2>
+            <div class="card-container" id="colours-card-container">
+                <!-- cards inserted from main.js -->
             </div>
         </div>
-        <div class="fonts-container">
-            <h2>
-                Fonts
-            </h2>
-                <div class='font' id="pt-sans">
-                    <h3>
-                        <u>PT Sans</u>    
-                    </h3>
-                    <p>
-                        The monkey crossed the road.
-                    </p>
-                    <p>
-                        <strong>The monkey crossed the road.</strong>
-                    </p>
-                    <p>
-                        <em>The monkey crossed the road.</em>
-                    </p>
-                </div>
-                <div class='font' id="roboto">
-                    <h3>
-                        <u>Roboto</u>    
-                    </h3>
-                    <p>
-                        The monkey crossed the road.
-                    </p>
-                    <p>
-                        <strong>The monkey crossed the road.</strong>
-                    </p>
-                    <p>
-                        <em>The monkey crossed the road.</em>
-                    </p>
-                </div>
-                <div class='font' id="helvetica">
-                    <h3>
-                        <u>Helvetica</u>    
-                    </h3>
-                    <p>
-                        The monkey crossed the road.
-                    </p>
-                    <p>
-                        <strong>The monkey crossed the road.</strong>
-                    </p>
-                    <p>
-                        <em>The monkey crossed the road.</em>
-                    </p>
+        <div class="container">
+            <h2>Fonts</h2>
+                <div class='card-container' id="fonts-card-container">
+                    <!-- fonts inserted from main.js -->
                 </div>
         </div>
-        <div class="text-styles-container">
-            <h2>
-                Text Styles
-            </h2>
-                <div class='text-style'>
-                    <h1 class="herosection-heading">
-                        H1: Herosection heading
-                    </h1>
-                    <ul class="font-style-list">
-                        <li>
-                            Font-size: 55px
-                        </li>
-                        <li>
-                            Font-size: 50px (Max screen 960px)
-                        </li>
-                        <li>
-                            Font-size: 40px (Max screen 768px)
-                        </li>
-                    </ul>
+        <div class="container">
+            <h2>Text Sizes</h2>
+                <div class='card-container' id="font-size-container">
+                    <!-- font-sizes inserted from main.js -->
                 </div>
-                <div class='text-style'>
-                    <h2 class="herosection-subheading">
-                        H2: Herosection subheading
-                    </h2>
-                    <ul class="font-style-list">
-                        <li>
-                            Font-size: 45px
-                        </li>
-                        <li>
-                            Font-size: 35px (Max screen 960px)
-                        </li>
-                        <li>
-                            Font-size: 24px (Max screen 768px)
-                        </li>
-                    </ul>
-                </div>
-                <div class='text-style'>
-                    <p class="herosection-p">
-                        p: Herosection paragraph
-                    </p>
-                    <ul class="font-style-list">
-                        <li>
-                            Font-size: 32px
-                        </li>
-                        <li>
-                            Font-size: 24px (Max screen 960px)
-                        </li>
-                        <li>
-                            Font-size: 20px (Max screen 768px)
-                        </li>
-                    </ul>
-                </div>
-            </ul>
         </div>
       </main>
-      <script type="module" src="./js/main.js"></script>
+      <script type="text/javascript" src="./js/main.js"></script>
   </body>
 </html>
