Minor UI changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </h1>
         <div class="btn-container">
             <a class='boilerplate-html-button' href="boilerplate-html.txt" target="_blank">
-                Boilerplate HTML
+                <strong>Boilerplate HTML</strong>
             </a> 
         </div>
         <div class="container">
